# boltzmann

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  book.toml  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  coingecko.md  getting-started.md  introduction.md  price-providers.md
docs/src/examples/: multiple-providers.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/docs/: swagger.rs
src/api/routes/: crypto.rs  gas.rs  health.rs  mod.rs
src/coins/: coingecko.rs  coinmarketcap.rs  mod.rs
src/core/: config.rs  errors.rs  mod.rs  server.rs
src/domains/: mod.rs
src/domains/crypto/: coingecko.rs  coinmarketcap.rs  mod.rs
src/domains/gas/price/: alloy.rs  etherscan.rs  mod.rs
src/gas/: mod.rs
src/gas/price/: alloy.rs  etherscan.rs
src/infrastructure/: mod.rs
src/infrastructure/logging/: mod.rs
