[package]
name = "boltzmann"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["pxlvre <vidalplr@outlook.com>"]
repository = "https://github.com/pxlvre/boltzmann"
description = "Gas and fee analytics API for EVM chains"

[dependencies]
# Core dependencies
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.96"
dotenvy = "0.15.7"

# Web framework (for future API)
axum = "0.8.6"
tower = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Blockchain (for future features)
alloy-primitives = "1.4.1"
alloy-provider = "1.0.41"
alloy-rpc-types = "1.0.41"
alloy-transport-http = "1.0.41"
alloy-contract = "1.0.41"
